<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="imageSliderGroup15Model" type="com.shivangsapplication.app.modules.onboardingaaaa.data.model.ImageSliderGroup15Model"/>
    </data>
    <FrameLayout android:id="@+id/frameGroup185"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:id="@+id/imageBackgroundimag"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageUrl="@{imageSliderGroup15Model.imageBackgroundimag}" tools:src="@drawable/img_backgroundimag_3"/>
        <LinearLayout android:id="@+id/linearGroup181"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtDNDMobile"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{imageSliderGroup15Model.txtDNDMobile}"
                style="@style/txtPoppinsbold28" tools:text="@string/lbl_dnd_mobile_3_0"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtSimplytheBest"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_width="match_parent"
                android:text="@{imageSliderGroup15Model.txtSimplytheBest}"
                style="@style/txtPoppinssemibold16" tools:text="@string/msg_simply_the_best"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnStartUsingDnd"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_start_using_dnd"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_start_using_dnd"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnRequestDemoAccount"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/msg_request_demo_ac"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/msg_request_demo_ac"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearGroup179"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLefticon"
                    android:layout_height="@dimen/_23pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lefticon" imageUrl="@{imageSliderGroup15Model.imageLefticon}"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrevious"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_241pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.69"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{imageSliderGroup15Model.txtPrevious}"
                    style="@style/txtPoppinsmedium12" tools:text="@string/lbl_previous"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
